--- a/Vitkund/Views/Shared/_Layout.cshtml
+++ b/Vitkund/Views/Shared/_Layout.cshtml
@@ -296,7 +296,7 @@
 
                                 @if (Session["LoggedIn"] == "true")
                                 {
-                                    <a href="#"><i class="feather-user"></i></a>
+                                    <a href="#"><i class="feather-user"></i> Login</a>
                                     <div class="rbt-user-menu-list-wrapper">
                                         <div class="inner">
                                             <div class="rbt-admin-profile">
@@ -339,7 +339,7 @@
                                 }
                                 else
                                 {
-                                    <a href="/Login"><i class="feather-user"></i></a>
+                                    <a href="/Login"><i class="feather-user"></i> Login</a>
                                 }
                             </li>
                             <!---
@@ -640,11 +640,11 @@
                                         <a href="/contact-us">Contact Us</a>
                                     </li>
                                     <li>
-                                        <a href="/Trending-Business">Trending Business</a>
+                                        <a href="/Trending-Business">Business Ideas</a>
                                     </li>
 
                                     <li>
-                                        <a href="/business-ideas">Business Ideas</a>
+                                        <a href="/business-ideas">Trending Business </a>
                                     </li>
                                     <li>
                                         <a href="/gallery">Gallery</a>
