--- a/Vitkund/Views/Home/AddTrendingBusiness.cshtml
+++ b/Vitkund/Views/Home/AddTrendingBusiness.cshtml
@@ -16,7 +16,7 @@
                         <h3 style="text-align:center;margin:0 0 12px 0;display:none" id="successaddedh3">Data Saved Successfully</h3>
 
                         <div class="card-header pb-0">
-                            <h5 class="card-title mb-0">Add Trending Business</h5>
+                            <h5 class="card-title mb-0">Add Business Ideas</h5>
                             <div class="card-options"><a class="card-options-collapse" href="#" data-bs-toggle="card-collapse"><i class="fe fe-chevron-up"></i></a><a class="card-options-remove" href="#" data-bs-toggle="card-remove"><i class="fe fe-x"></i></a></div>
                         </div>
                         <div class="card-body">
