--- a/Vitkund/Views/Home/BusinessIdeas.cshtml
+++ b/Vitkund/Views/Home/BusinessIdeas.cshtml
@@ -19,16 +19,16 @@
                     <div class="col-lg-12">
                         <!-- Start Breadcrumb Area  -->
                         <ul class="page-list">
-                            <li class="rbt-breadcrumb-item"><a href="index">Home</a></li>
+                            <li class="rbt-breadcrumb-item"><a href="/index">Home</a></li>
                             <li>
                                 <div class="icon-right"><i class="feather-chevron-right"></i></div>
                             </li>
-                            <li class="rbt-breadcrumb-item active"> Business Ideas</li>
+                            <li class="rbt-breadcrumb-item active">Trending Business</li>
                         </ul>
                         <!-- End Breadcrumb Area  -->
 
                         <div class=" title-wrapper">
-                            <h1 class="title mb--0">Business Ideas</h1>
+                            <h1 class="title mb--0">Trending Business</h1>
 
                         </div>
 
