--- a/Vitkund/Views/Home/Result.cshtml
+++ b/Vitkund/Views/Home/Result.cshtml
@@ -98,6 +98,16 @@
     <div class="checkout_area bg-color-white" style="padding-top:30px; padding-bottom:50px;">
         <div class="container">
             <div class="row">
+                <div class="col-lg-3 text-center"><h5>Name: Anil Jangra</h5></div>
+                <div class="col-lg-6 text-center"><h5>Business : Restaurant</h5> </div>
+                <div class="col-lg-3 text-center" style="margin-bottom:30px;">
+                    <a class="rbt-btn blink btn-border-gradient radius-round btn-sm hover-transform-none" style="background: linear-gradient(90deg, #CFA2E8, #f9ba34);">
+                        Score: 68
+                    </a>
+                </div>
+                <br />
+                <hr />
+
                 <div class="col-lg-6">
                     <!-- partial:index.partial.html -->
                     <script src="../Content/assets/js/amcharts.js"></script>
@@ -272,6 +282,7 @@
                         //});
                     </script>
                 </div>
+
                 <div class="col-lg-6" style="padding-top:50px;">
                     <ul class="legend" style="list-style:none;">
                         <li class="keyone">> 76 Extremly Recommended</li>
@@ -283,8 +294,27 @@
 
                     </ul>
                 </div>
-                <span id="finalresult" style="color:red;text-align:center"></span>
 
+                <h1 style="color:#f9ba34;text-align:center"><i>Congratulation</i></h1>
+                <span id="finalresult" style="color:red;text-align:center"></span>
+                <br />
+                <form>
+                    <div class="row g-5 checkout-form">
+                        <div class="col-lg-4 offset-lg-4">
+                            <label>&nbsp;</label>
+                            <div class="rbt-modern-select bg-transparent height-45">
+                                <select class="w-100 validationcheck" id="plan" required>
+                                    <option value="">-- Select Plan --</option>
+                                    <option value="500000" >Pro (Recommended) 5000 /(3 Month)</option>
+                                    <option value="750000">Clasic 7500 /(6 Month)</option>
+                                    <option value="1000000">Silver 10000 /(9 Month)</option>
+                                    <option value="1250000">Gold 12500 /(12 Month)</option>
+
+                                </select>
+                            </div>
+                        </div>
+                        </div>
+                </form>
                 <div class="col-lg-12">
                     <div class="pricing-btn-group text-center" style="margin-top:50px;">
                         <button id="payNow" class="rbt-btn btn-gradient finalpayment">Pay Now</button>
@@ -292,7 +322,7 @@
 
                 </div>
             </div>
-        </div>
+            </div>
     </div>
 
     <div class="rbt-separator-mid">
