--- a/Vitkund/Views/Shared/_AdminLayout.cshtml
+++ b/Vitkund/Views/Shared/_AdminLayout.cshtml
@@ -199,7 +199,7 @@
                                                     <path fill-rule="evenodd" clip-rule="evenodd" d="M11.9702 2.5C5.58324 2.5 4.50424 3.432 4.50424 10.929C4.50424 19.322 4.34724 21.5 5.94324 21.5C7.53824 21.5 10.1432 17.816 11.9702 17.816C13.7972 17.816 16.4022 21.5 17.9972 21.5C19.5932 21.5 19.4362 19.322 19.4362 10.929C19.4362 3.432 18.3572 2.5 11.9702 2.5Z" stroke="#130F26" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                                                 </g>
                                             </g>
-                                        </svg><span>Bussiness Ideas</span>
+                                        </svg><span>Trending Bussiness Ideas</span>
                                     </a>
 
                                 </li>
@@ -212,7 +212,7 @@
                                                     <path fill-rule="evenodd" clip-rule="evenodd" d="M11.9702 2.5C5.58324 2.5 4.50424 3.432 4.50424 10.929C4.50424 19.322 4.34724 21.5 5.94324 21.5C7.53824 21.5 10.1432 17.816 11.9702 17.816C13.7972 17.816 16.4022 21.5 17.9972 21.5C19.5932 21.5 19.4362 19.322 19.4362 10.929C19.4362 3.432 18.3572 2.5 11.9702 2.5Z" stroke="#130F26" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                                                 </g>
                                             </g>
-                                        </svg><span>Add Trending Bussiness Ideas</span>
+                                        </svg><span>Add Bussiness Ideas</span>
                                     </a>
 
                                 </li>
