--- a/Vitkund/Views/Home/Signup.cshtml
+++ b/Vitkund/Views/Home/Signup.cshtml
@@ -10,13 +10,14 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="breadcrumb-inner text-center">
-                    <h2 class="title">Signup</h2>
+                    <img src="~/Content/assets/images/happy.png" style="max-width:100px;" />
+                    <h2 class="title">Thank You</h2>
                     <ul class="page-list">
                         <li class="rbt-breadcrumb-item"><a href="index">Home</a></li>
                         <li>
                             <div class="icon-right"><i class="feather-chevron-right"></i></div>
                         </li>
-                        <li class="rbt-breadcrumb-item active">Signup</li>
+                        <li class="rbt-breadcrumb-item active">Thank You</li>
                     </ul>
                 </div>
             </div>
@@ -32,7 +33,11 @@
 
             <div class="col-lg-8 offset-lg-2">
                 <div class="checkout-content-wrapper">
-
+                    <div class="text-center">
+                        <h5>Please create your Username & Password for Login.</h5>
+                        <hr style="max-width:150px; text-align:center; margin:0 auto;" />
+                        <br />
+                    </div>
                     <!-- Billing Address -->
                     <div id="billing-form">
 
@@ -44,23 +49,12 @@
                             </div>
 
                             <div class="col-md-6 col-12">
-                                <label>Your Father Name*</label>
-                                <input type="text" id="fathernametxtbox" placeholder="Father Name">
+                                <label>Your Email*</label>
+                                <input type="text" id="fathernametxtbox" placeholder="Email Id">
                                 <span id="maxvalspanfathername" style="color:red"></span><span id="validationMessageforfathername" style="color:red"></span><span id="requiredvalidationforfathername" style="color:red"></span>
                             </div>
 
-                            <div class="col-md-6 col-12">
-                                <label>City *</label>
-                                <input type="text" id="districttxbox" placeholder="Your City">
-                                <span id="maxvalspandistrict" style="color:red"></span><span id="validationMessagefordistrict" style="color:red"></span><span id="requiredvalidationfordistrict" style="color:red"></span>
-                            </div>
-
-                            <div class="col-md-6 col-12">
-                                <label>State *</label>
-                                <input type="text" id="statetxtbox" placeholder="Your State">
-                                <span id="maxvalspanstate" style="color:red"></span><span id="validationMessageforstate" style="color:red"></span><span id="requiredvalidationforstate" style="color:red"></span>
-                            </div>
-
+                           
                             <div class="col-md-6 col-12">
                                 <label>Mobile Number *</label>
                                 <input type="text" id="mobilenotxtbox" placeholder="Your Mobile No. ">
